<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="at.sallaberger.thomas.myapplication.activities.AddSchoolYearActivity">


    <EditText
        android:id="@+id/activity_add_schoolyear_et_schoolyearname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/et_schoolyear_hint"
        android:inputType="textPersonName"
        android:layout_marginTop="107dp"
        android:textSize="@dimen/label_text_size"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/activity_add_schoolyear_btn_ok"
        android:layout_alignEnd="@+id/activity_add_schoolyear_btn_ok"
        android:layout_alignLeft="@+id/activity_add_schoolyear_btn_cancel"
        android:layout_alignStart="@+id/activity_add_schoolyear_btn_cancel" />

    <Button
        android:id="@+id/activity_add_schoolyear_btn_ok"
        android:layout_width="@dimen/btn_width_small"
        android:layout_height="wrap_content"
        android:text="@string/btn_ok"
        android:textSize="@dimen/btn_textSize"
        android:layout_alignBaseline="@+id/activity_add_schoolyear_btn_cancel"
        android:layout_alignBottom="@+id/activity_add_schoolyear_btn_cancel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="42dp"
        android:layout_marginEnd="42dp" />

    <Button
        android:id="@+id/activity_add_schoolyear_btn_cancel"
        android:layout_width="@dimen/btn_width_small"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:textSize="@dimen/btn_textSize"
        android:layout_marginTop="56dp"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp"
        android:layout_below="@+id/activity_add_schoolyear_tv_schoolyearname_validate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/activity_add_schoolyear_tv_schoolyearname_validate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="15dp"
        android:text="@string/error_schoolyear_invalid"
        android:textColor="@android:color/holo_red_light"
        android:textSize="@dimen/btn_textSize"
        android:layout_below="@+id/activity_add_schoolyear_et_schoolyearname"
        android:layout_alignRight="@+id/activity_add_schoolyear_et_schoolyearname"
        android:layout_alignEnd="@+id/activity_add_schoolyear_et_schoolyearname"
        android:layout_alignLeft="@+id/activity_add_schoolyear_et_schoolyearname"
        android:layout_alignStart="@+id/activity_add_schoolyear_et_schoolyearname" />


</RelativeLayout>
